--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@material-tailwind/html": "^2.2.3"
+        "@material-tailwind/html": "^2.2.3",
+        "material-ripple-effects": "^2.0.1"
     }
 }
