--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@material-tailwind/html": "^2.2.3",
+        "flowbite": "^2.5.2",
         "material-ripple-effects": "^2.0.1"
     }
 }
