--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.40",
         "tailwindcss": "^3.4.7",
         "vite": "^5.0"
     },
     "dependencies": {
-        "@material-tailwind/html": "^2.2.3",
-        "flowbite": "^2.5.2",
-        "material-ripple-effects": "^2.0.1"
+        "flowbite": "^2.5.2"
     }
 }
