--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "*",
+        "livewire/livewire": "^3.5",
         "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
