--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "flowbite": "^2.5.2"
+        "flowbite": "^2.5.2",
+        "toastr": "^2.1.4"
     }
 }
