--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "*",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
