--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,9 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.0",
+        "livewire/flux": "*",
         "livewire/volt": "^1.6.7",
         "razorpay/razorpay": "^2.9"
-
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
