--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/flux": "*",
+        "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7",
         "razorpay/razorpay": "^2.9"
     },
