--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "autoprefixer": "^10.4.19",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.40",
-        "tailwindcss": "^4.0.8",
+        "tailwindcss": "^4.0.9",
         "vite": "^5.0"
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^44.2.1",
+        "@tailwindcss/vite": "^4.0.9",
         "flowbite": "^2.5.2",
+        "preline": "^2.7.0",
         "toastr": "^2.1.4"
     }
 }
