--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7",
+        "milon/barcode": "^12.0",
         "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
