--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7",
         "milon/barcode": "^12.0",
-        "razorpay/razorpay": "^2.9"
+        "razorpay/razorpay": "^2.9",
+        "google/apiclient": "^2.15"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
