--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^44.2.1",
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
         "@tailwindcss/vite": "^4.0.9",
         "flowbite": "^2.5.2",
         "preline": "^2.7.0",
