--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "google/apiclient": "^2.18",
+        "google/apiclient": "^2.15",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7",
         "milon/barcode": "^12.0",
-        "razorpay/razorpay": "^2.9",
-        "google/apiclient": "^2.15"
+        "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
