--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7",
         "milon/barcode": "^12.0",
+        "picqer/php-barcode-generator": "^3.2",
         "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
